<?xml version="1.0"?>
<package format="2">
  <name>silbot3_render_mobility</name>
  <version>0.0.0</version>
  <description>The silbot3_render_mobility package</description>

  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <license>BSD</license>

  <url type="repository">https://github.com/byeongkyu/silbot3_shri_render</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>mind_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>mind_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <export>
  </export>
</package>
